2011-04-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-pack.lisp (resize-frame-constrained): Takes care of
	border size.
	(implode-frame, implode-current-frame): New functions. Absorb all
	frames subchildren in frame. Explode frame opposite.

2011-04-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-pack.lisp (move-frame-constrained)
	(resize-frame-constrained): New function. Move and resize frame
	with the mouse constrained by other frame brothers.

2011-04-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (with-movement-select-next-brother)
	(with-movement-select-previous-brother)
	(with-movement-select-next-child): Use a simple method (do not
	enter in the circulate mode) to allow to circulate in all children
	or brothers.

	* src/clfswm-menu.lisp (open-menu): Save info hash table keys
	instead of deleting newly created keys.

2011-03-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (x-px->fl, y-px->fl): Takes care of
	border size.

2011-03-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): call
	produce-conf-var-doc.

2011-03-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-conf-var-doc-html): Produce a
	documentation for all configurable variables in CLFSWM -
	HTML version.

	* src/clfswm-internal.lisp (leave-frame): Hide all children except
	the current window.

2011-03-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-all-docs): Produce a
	documentation for all configurable variables in CLFSWM.

	* src/clfswm-layout.lisp (set-gimp-layout): Display a notify
	window with the help on the GIMP layout.

2011-03-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Menu update to prevent cursor keys clash.

	* clfswm.asd: Change compilation order to prevent undefined
	variables.
